refactor: Improve some code using Java 25 features